# glowberry

./: .gitignore  .prettierignore  CLAUDE.md  README.md  TODO.todo  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  ui-tweaks.md  vite.config.ts
.github/workflows/: format.yml  quality.yml  release.yml
assets/: mac.icns
assets/mac.icon/: icon.json
src/: App.module.css  App.tsx  SettingsPanel.module.css  SettingsPanel.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  settings.rs  state.rs
src-tauri/src/auth/: keychain.rs  microsoft.rs  mod.rs
src-tauri/src/commands/: auth.rs  file_locks.rs  folder.rs  github.rs  install.rs  instances.rs  launch.rs  mod.rs  modpacks.rs  presets.rs  settings.rs
src-tauri/src/download/: manager.rs
src-tauri/src/instance/: file_lock.rs  manager.rs  mod.rs
src-tauri/src/minecraft/: adoptium.rs  fabric.rs  install.rs  java.rs  launch.rs  mod.rs  version.rs
src-tauri/src/modrinth/: api.rs  mod.rs  mrpack.rs  types.rs
src/api/: auth.ts  file_locks.ts  github.ts  install.ts  instances.ts  launch.ts  modpacks.ts  presets.ts  settings.ts
src/components/: Icons.tsx  InstanceCard.module.css  InstanceCard.tsx  ModpackRow.module.css  ModpackRow.tsx  NavBar.module.css  NavBar.tsx  OfflinePopup.module.css  OfflinePopup.tsx  Sidebar.module.css  Sidebar.tsx  ToastContainer.module.css  ToastContainer.tsx
src/hooks/: useAuth.ts  useGameStatus.ts  useInstallProgress.ts  useInstances.ts  useToast.tsx
(+8 files in other folders)
