[package]
name = "lantern"
version = "0.1.0"
description = "A simple, fast Minecraft launcher"
authors = ["Matej Stastny"]
edition = "2021"

[lib]
name = "lantern_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
zip = "2"
sha1 = "0.10"
sha2 = "0.10"
directories = "6"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
url = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
flate2 = "1"
tar = "0.4"
tauri-plugin-dialog = "2.6.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
